# freenectStreamer

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: Findasio.cmake  Findlibfreenect2.cmake
cmake_modules/: FindASIO.cmake  FindFreenect2.cmake
headers/: Config.h  stb_dxt.h
src/: IMPRESS_UDPClient.cpp  freenectStreamer.cpp
